# local-gemma-agent

./: .env.example  .gitignore  README.md  bootstrap.ps1  launch-local-gemma-agent.vbs  pyproject.toml  run-agent.ps1  run-gui.ps1
src/local_gemma_agent/: __init__.py  __main__.py  agent.py  config.py  gui.py  tools.py
workspace/docs/: getting-started.md
workspace/wireframes/: local-gemma-agent-wireframe.html
